# chess

./: CMakeLists.txt  vcpkg.json
chess-android/: .gitignore  CLAUDE.md  settings.gradle.kts
chess-android/app/: build.gradle.kts
chess-android/app/src/main/: AndroidManifest.xml
chess-android/app/src/main/java/com/example/chessandroid/: ChessApplication.kt  (+1 more)
chess-android/app/src/main/res/values/: strings.xml
chess-android/app/src/main/res/xml/: network_security_config.xml
chess-android/docs/: google-login-implementation-plan.md
chess-android/gradle/: libs.versions.toml
chess-android/gradle/wrapper/: gradle-wrapper.properties
chess-backend/: CLAUDE.md  TODO.md  build.gradle.kts  query.sh
chess-backend/src/main/kotlin/com/example/chess_backend/: ChessBackendApplication.kt  MessageController.kt
chess-backend/src/main/resources/: application-dev.properties  application.properties
src/client/: CMakeLists.txt  bishop.cpp  bishop.hpp  board.cpp  board.hpp  event.hpp  event_dispatcher.cpp  event_dispatcher.hpp  event_queue.cpp  event_queue.hpp  game.cpp  game.hpp  input.cpp  input.hpp  interface_clickable.hpp  interface_drawable.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  main.cpp  main.hpp  message.pb.cc  message.pb.h  message.proto  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  play_button.cpp  play_button.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp  scene.hpp  start_scene.cpp  start_scene.hpp  waiting_scene.cpp  waiting_scene.hpp  (+2 more)
src/common/: message.hpp
src/match/: CMakeLists.txt  main.cpp  main.hpp
src/server/: CMakeLists.txt  main.cpp  main.hpp
(+61 files in other folders)
